Fixed centering of about page photo on mobile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,8 +6,8 @@
 }
 
 #about-us img {
-  padding: 20px;
   display: block;
+  padding: 20px 0px 20px 0px;
   margin-left: auto;
   margin-right: auto;
 }
